--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -1,20 +1,26 @@
-main :nth-child(1), main :nth-child(1) section:nth-child(3){
+main :nth-child(1){
     display: flex;
     /* justify-content: center; */
     align-content: flex-start;
     flex-flow: row wrap;
 }
 
-main {
-    max-width: 960px;
-    margin: 0 auto;
-}
 div {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-
+main {
+    width: 960px;
+    margin: 0 auto;
+    height: 850px;
+}
+main :nth-child(1) section:nth-child(3) {
+    display: flex;
+    width: 760px;
+    flex-flow: row wrap;
+    height: 100%;
+}                        
 main :nth-child(1) div:nth-child(1) {
     width: 960px;
     height: 100px;
@@ -39,7 +45,133 @@ main :nth-child(1) section:nth-child(3) div:nth-child(5), main :nth-child(1) sec
 }
 
 main :nth-child(1) section:nth-child(3) div:nth-child(7) {
-    width: 760px;
+    width: 960px;
     height: 150px;
     /* order: 4; */
 }
+
+@media only screen and (min-width: 480px) and (max-width: 767px){ 
+    main {
+        width: 480px;
+        margin: 0 auto;
+        height: fit-content;
+    }
+    main :nth-child(1) section:nth-child(3) {
+        display: flex;
+        width: 480px;
+        flex-flow: row wrap;
+        height: 100%;
+    }                        
+    main :nth-child(1) div:nth-child(1) {
+        width: 480px;
+        height: 75px;
+        /* order: 1; */
+    }
+    
+    main :nth-child(1) div:nth-child(2) {
+        width: 480px;
+        height: 150px;
+        /* order: 2; */
+    }
+    
+    main :nth-child(1) section:nth-child(3) div:nth-child(1), main :nth-child(1) section:nth-child(3) div:nth-child(2) {
+        width: 480px;
+        height: 125px;
+    }
+    
+    main :nth-child(1) section:nth-child(3) div:nth-child(3), main :nth-child(1) section:nth-child(3) div:nth-child(4), 
+    main :nth-child(1) section:nth-child(3) div:nth-child(5), main :nth-child(1) section:nth-child(3) div:nth-child(6) {
+        width: 240px;
+        height: 250px;
+    }
+    
+    main :nth-child(1) section:nth-child(3) div:nth-child(7) {
+        width: 480px;
+        height: 80px;
+        /* order: 4; */
+    }
+    }
+    @media only screen and (min-width: 480px) and (max-width: 767px){ 
+    main {
+        width: 480px;
+        margin: 0 auto;
+        height: fit-content;
+        background-color: blue;
+    }
+    main :nth-child(1) section:nth-child(3) {
+        display: flex;
+        width: 480px;
+        flex-flow: row wrap;
+        height: 100%;
+    }                        
+    main :nth-child(1) div:nth-child(1) {
+        width: 480px;
+        height: 75px;
+        /* order: 1; */
+    }
+    
+    main :nth-child(1) div:nth-child(2) {
+        width: 480px;
+        height: 150px;
+        /* order: 2; */
+    }
+    
+    main :nth-child(1) section:nth-child(3) div:nth-child(1), main :nth-child(1) section:nth-child(3) div:nth-child(2) {
+        width: 480px;
+        height: 125px;
+    }
+    
+    main :nth-child(1) section:nth-child(3) div:nth-child(3), main :nth-child(1) section:nth-child(3) div:nth-child(4), 
+    main :nth-child(1) section:nth-child(3) div:nth-child(5), main :nth-child(1) section:nth-child(3) div:nth-child(6) {
+        width: 240px;
+        height: 250px;
+    }
+    
+    main :nth-child(1) section:nth-child(3) div:nth-child(7) {
+        width: 480px;
+        height: 80px;
+        /* order: 4; */
+    }
+    }
+    @media only screen and (min-width: 1024px) and (max-width: 1366px){ 
+        main {
+            width: 1024px;
+            margin: 0 auto;
+            height: fit-content;
+            background-color: red;
+        }
+        main :nth-child(1) section:nth-child(3) {
+            display: flex;
+            width: 1024px;
+            flex-flow: row wrap;
+            height: 100%;
+        }                        
+        main :nth-child(1) div:nth-child(1) {
+            width: 1024px;
+            height: 75px;
+            /* order: 1; */
+        }
+        
+        main :nth-child(1) div:nth-child(2) {
+            width: 1024px;
+            height: 150px;
+            /* order: 2; */
+        }
+        
+        main :nth-child(1) section:nth-child(3) div:nth-child(1), main :nth-child(1) section:nth-child(3) div:nth-child(2) {
+            width: 1024px;
+            height: 125px;
+        }
+        
+        main :nth-child(1) section:nth-child(3) div:nth-child(3), main :nth-child(1) section:nth-child(3) div:nth-child(4), 
+        main :nth-child(1) section:nth-child(3) div:nth-child(5), main :nth-child(1) section:nth-child(3) div:nth-child(6) {
+            width: 510px;
+            height: 250px;
+        }
+        
+        main :nth-child(1) section:nth-child(3) div:nth-child(7) {
+            width: 1024px;
+            height: 80px;
+            /* order: 4; */
+        }
+        }
