--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -96,7 +96,6 @@ main :nth-child(1) section:nth-child(3) div:nth-child(7) {
         width: 480px;
         margin: 0 auto;
         height: fit-content;
-        background-color: blue;
     }
     main :nth-child(1) section:nth-child(3) {
         display: flex;
@@ -107,29 +106,36 @@ main :nth-child(1) section:nth-child(3) div:nth-child(7) {
     main :nth-child(1) div:nth-child(1) {
         width: 480px;
         height: 75px;
+        background-color: blue;
+
         /* order: 1; */
     }
     
     main :nth-child(1) div:nth-child(2) {
         width: 480px;
         height: 150px;
+        background-color: red;
+
         /* order: 2; */
     }
     
     main :nth-child(1) section:nth-child(3) div:nth-child(1), main :nth-child(1) section:nth-child(3) div:nth-child(2) {
         width: 480px;
         height: 125px;
+        background-color: green;
     }
     
     main :nth-child(1) section:nth-child(3) div:nth-child(3), main :nth-child(1) section:nth-child(3) div:nth-child(4), 
     main :nth-child(1) section:nth-child(3) div:nth-child(5), main :nth-child(1) section:nth-child(3) div:nth-child(6) {
         width: 240px;
         height: 250px;
+        background-color: purple;
     }
     
     main :nth-child(1) section:nth-child(3) div:nth-child(7) {
         width: 480px;
         height: 80px;
+        background-color: black;
         /* order: 4; */
     }
     }
@@ -138,40 +144,47 @@ main :nth-child(1) section:nth-child(3) div:nth-child(7) {
             width: 1024px;
             margin: 0 auto;
             height: fit-content;
-            background-color: red;
         }
         main :nth-child(1) section:nth-child(3) {
             display: flex;
             width: 1024px;
             flex-flow: row wrap;
             height: 100%;
+            background-color: red;
+
         }                        
         main :nth-child(1) div:nth-child(1) {
             width: 1024px;
             height: 75px;
+            background-color: teal;
             /* order: 1; */
         }
         
         main :nth-child(1) div:nth-child(2) {
             width: 1024px;
             height: 150px;
+            background-color: lightpink;
+
             /* order: 2; */
         }
         
         main :nth-child(1) section:nth-child(3) div:nth-child(1), main :nth-child(1) section:nth-child(3) div:nth-child(2) {
             width: 1024px;
             height: 125px;
+            background-color: orangered;
         }
         
         main :nth-child(1) section:nth-child(3) div:nth-child(3), main :nth-child(1) section:nth-child(3) div:nth-child(4), 
         main :nth-child(1) section:nth-child(3) div:nth-child(5), main :nth-child(1) section:nth-child(3) div:nth-child(6) {
             width: 510px;
             height: 250px;
+            background-color: sienna;
         }
         
         main :nth-child(1) section:nth-child(3) div:nth-child(7) {
             width: 1024px;
             height: 80px;
+            background-color: turquoise;
             /* order: 4; */
         }
         }
